--- a/app/src/main/res/layout/item_assets.xml
+++ b/app/src/main/res/layout/item_assets.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="8dp">
 
@@ -14,6 +15,7 @@
         android:layout_marginHorizontal="6dp">
 
         <TextView
+            android:id="@+id/cryptoName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bitcoin"
@@ -26,17 +28,28 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/cryptoPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$9865000"
                 android:textSize="16sp"/>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="4sp"
+                android:layout_marginHorizontal="8dp"
+                >
+
             <TextView
+                android:id="@+id/cryptoChange"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="+5.2%"
-                android:textSize="16sp"
-                android:layout_marginHorizontal="8dp"/>
+                android:textSize="12sp"
+                android:padding="3dp"/>
+
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
