--- a/app/src/main/res/layout/item_home_cryptotops.xml
+++ b/app/src/main/res/layout/item_home_cryptotops.xml
@@ -59,11 +59,17 @@
             android:textColor="@color/black" />
 
         <!-- Изменение цены за 24ч -->
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="4dp"
+            android:layout_marginTop="6dp">
+
         <TextView
             android:id="@+id/cryptoChange"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:text="+2.5%"
             android:textSize="12sp"
             android:textStyle="bold"
@@ -71,7 +77,7 @@
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp" />
 
-
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
