--- a/app/src/main/res/layout/item_assets.xml
+++ b/app/src/main/res/layout/item_assets.xml
@@ -64,17 +64,45 @@
         android:layout_marginHorizontal="6dp">
 
         <TextView
+            android:id="@+id/assetCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$64,123.45"
             android:textStyle="bold"
             android:textSize="20sp"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0.876 BTC"
-            android:textSize="16sp"/>
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="4sp"
+                android:layout_marginHorizontal="8dp"
+                >
+
+                <TextView
+                    android:id="@+id/assetChange"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="+5.2%"
+                    android:textSize="12sp"
+                    android:padding="3dp"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/assetAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0.876 BTC"
+                android:textSize="16sp"/>
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
