--- a/app/src/main/res/layout/dialog_bottom_sheet_delete.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_delete.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Внести криптовалюту"
+        android:text="Вывести криптовалюту"
         android:textSize="20sp"
         android:textStyle="bold"
         android:gravity="center"
@@ -25,15 +25,16 @@
         android:id="@+id/editSum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Введите сумму покупки"
+        android:hint="Введите сумму продажи"
         android:layout_marginBottom="16dp" />
 
     <EditText
         android:id="@+id/editCurrent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Введите курс на момент покупки"
+        android:hint="Введите курс на момент продажи"
         android:layout_marginBottom="16dp" />
+
 
     <TextView
         android:id="@+id/editCount"
@@ -47,7 +48,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Введите количество полученных токенов"
+        android:hint="Введите количество проданных токенов"
         android:layout_marginBottom="16dp" />
 
 
@@ -55,7 +56,7 @@
         android:id="@+id/btnConfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Внести"
+        android:text="Вывести"
         android:layout_marginBottom="8dp" />
 
     <Button
