--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -84,6 +84,10 @@
             android:text="вывести"
             app:layout_constraintStart_toEndOf="@+id/addAssets" />
 
+        <com.example.cryptoassistant.DiagramView
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
+
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
