--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -10,7 +10,7 @@
         android:id="@+id/balanceText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="30dp"
         android:text="Баланс"
         android:textSize="20sp"
         android:gravity="center"
@@ -61,12 +61,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="46dp"
         android:gravity="center"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/balanceChangeCard"
         tools:ignore="MissingConstraints">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <Button
             android:id="@+id/addAssets"
@@ -84,9 +89,12 @@
             android:text="вывести"
             app:layout_constraintStart_toEndOf="@+id/addAssets" />
 
-        <com.example.cryptoassistant.DiagramView
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
+        </LinearLayout>
+
+        <com.example.cryptoassistant.CustomProgressBarView
+            android:id="@+id/customProgressBarView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
