--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -61,17 +61,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="46dp"
         android:gravity="center"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/balanceChangeCard"
         tools:ignore="MissingConstraints">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
         <Button
             android:id="@+id/addAssets"
@@ -89,12 +84,7 @@
             android:text="вывести"
             app:layout_constraintStart_toEndOf="@+id/addAssets" />
 
-        </LinearLayout>
 
-        <com.example.cryptoassistant.CustomProgressBarView
-            android:id="@+id/customProgressBarView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
