--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         app:cardCornerRadius="16dp"
         tools:ignore="MissingConstraints">
 
-    <com.example.cryptoassistant.CustomToolbarView
+    <com.example.cryptoassistant.presentation.customviews.CustomToolbarView
         android:id="@+id/customToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
