--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.cryptoassistant.ui.home.HomeFragment"
+        android:name="com.example.cryptoassistant.presentation.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home">
 
@@ -32,7 +32,7 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.cryptoassistant.ui.dashboard.DashboardFragment"
+        android:name="com.example.cryptoassistant.presentation.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard">
 
@@ -48,7 +48,7 @@
 
     <fragment
         android:id="@+id/navigation_news"
-        android:name="com.example.cryptoassistant.ui.home.NewsFragment"
+        android:name="com.example.cryptoassistant.presentation.ui.home.NewsFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_news">
 
@@ -56,7 +56,7 @@
 
     <fragment
         android:id="@+id/navigation_crypto"
-        android:name="com.example.cryptoassistant.ui.home.CryptoFragment"
+        android:name="com.example.cryptoassistant.presentation.ui.home.CryptoFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_crypto">
 
