--- a/app/src/main/res/drawable/ic_arrow.xml
+++ b/app/src/main/res/drawable/ic_arrow.xml
@@ -2,16 +2,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
 
-    <!-- Острие стрелки (правая часть) -->
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M24,0 L18,0 L18,24 L24,24 z"/>
+        android:fillColor="#F6F4F4"
+        android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z" />
 
-    <!-- Тело стрелки (наклонная часть) -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M18,0 L0,12 L0,12 L18,24 z"/>
 </vector>
