--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,16 @@
         android:layout_height="wrap_content">
 
         <!-- Заголовок "Избранное" -->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:menu="@menu/home_naw_menu" />
+
         <TextView
             android:id="@+id/favoriteTitle"
             android:layout_width="wrap_content"
@@ -30,16 +40,15 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:text="Топ изменений"
-            android:layout_marginTop="10dp"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/nav_view" />
 
         <!-- Горизонтальный RecyclerView для криптовалют -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cryptoTopRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             tools:listitem="@layout/item_home_cryptotops"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,26 +67,26 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <TextView
-            android:id="@+id/newsTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginHorizontal="20dp"
-            android:text="Новости"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cryptoTopRecyclerView" />
+<!--        <TextView-->
+<!--            android:id="@+id/newsTitle"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="12dp"-->
+<!--            android:layout_marginHorizontal="20dp"-->
+<!--            android:text="Новости"-->
+<!--            android:textSize="20sp"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/cryptoTopRecyclerView" />-->
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/cryptoNewsRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            tools:listitem="@layout/item_home_news"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newsTitle" />
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/cryptoNewsRecyclerView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="2dp"-->
+<!--            tools:listitem="@layout/item_home_news"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/newsTitle" />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
